# Googletest-basic-example

./: CMakeLists.txt  ExampleClass.cpp  ExampleClass.h  README.md
tests/: CMakeLists.txt  ExampleClass_Tests.cpp
